project('symbol-slasher', 'cpp', default_options : ['cpp_std=c++17'])
add_project_arguments('-D_GLIBCXX_USE_CXX11_ABI=0', language : 'cpp')
cxx = meson.get_compiler('cpp')
bfd = cxx.find_library('libbfd')
lief_lib = cxx.find_library('libLIEF', dirs: [meson.current_source_dir() + '/LIEF-0.9.0-Linux/lib'])
lief_inc = include_directories('LIEF-0.9.0-Linux/include')
main = executable('symbol-slasher', 'slasher.cpp', dependencies: [bfd, lief_lib], include_directories: [lief_inc])
