project('symbol-slasher', 'cpp', default_options : ['cpp_std=c++17'])
add_project_arguments('-D_GLIBCXX_USE_CXX11_ABI=0', language : 'cpp')
cxx = meson.get_compiler('cpp')
lief_lib = cxx.find_library('libLIEF', dirs: [meson.current_source_dir() + '/LIEF-0.9.0-Linux/lib'])
lief_inc = include_directories('LIEF-0.9.0-Linux/include')
cxxfs = cxx.find_library('libstdc++fs')
main = executable('symbol-slasher', 'main.cpp', dependencies: [lief_lib, cxxfs], include_directories: [lief_inc])
